--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/index.css">
     <title>Weather Radar</title>
-    <script src="./index.js"></script>
+    <script src="./fetch.js"></script>
 </head>
 
 <body>
