--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/index.css">
-    <title>Weather Radar</title>
-    <script src="/src/fetch.js"></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/src/index.css" />
 
-<body>
-    
-</body>
+    <title>Weather Radar</title>
+
+    <script src="/src/fetch.js"></script>
+    <script
+      src="https://kit.fontawesome.com/3d736ff224.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--
+    <style>
+      @keyframes appear {
+        from {
+          transform: scale(0.8);
+          opacity: 0.5;
+        }
+        to {
+          transform: scale(1);
+          opacity: 1;
+        }
+      }
+  
+      nav {
+        animation-name: appear;
+        animation-duration: 350ms;
+        animation-timing-function: ease; 
+      }
+    </style>
+  --></head>
+
+  <body>
+    <!-- NavBar -->
+    <nav>
+      <div class="container">
+        <div class="items">
+          <svg
+            style="margin-left: 5px"
+            width="20"
+            height="23"
+            viewBox="0 0 20 23"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <circle cx="10" cy="2.5" r="2.5" fill="white" />
+            <circle cx="17.5" cy="7.5" r="2.5" fill="white" />
+            <circle cx="2.5" cy="7.5" r="2.5" fill="white" />
+            <circle cx="2.5" cy="15" r="2.5" fill="white" />
+            <circle cx="17.5" cy="15" r="2.5" fill="white" />
+            <circle cx="10" cy="20" r="2.5" fill="white" />
+          </svg>
+          <a href="#">Our team</a>
+          <a href="#">Weather Updates</a>
+          <a href="#" class="cta">Upgrade</a>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Hero -->
+
+    <main>
+      <div class="photos">
+        <img class="top" src="/assets/images/forest-8592902_1920.webp" />
+        <img class="bottom" src="/assets/images/lake-6798400_1280.webp" />
+      </div>
+      <div class="banner">
+        <h1>
+          Your all <br />in one <br />weather<br />
+          app..
+        </h1>
+        <p>
+          We are here to serve you the <br />latest and most easily accessible
+          <br />weather updates
+        </p>
+      </div>
+    </main>
+
+    <section class="buttons">
+      <div class="container">
+        <div class="mode">
+          <p id="dark">Dark</p>
+          <p id="light">Light</p>
+        </div>
+        <div class="scroll">
+          <p>Scroll to explore</p>
+          <i class="fa-solid fa-chevron-down"></i>
+        </div>
+      </div>
+    </section>
+    <script>
+      const dark = document.getElementById("dark");
+      const light = document.getElementById("light");
+      dark.onclick = function () {
+        document.documentElement.classList.add("dark-theme");
+        dark.style.setProperty("color", "white");
+        light.style.setProperty("color", "var(--color-tertiary)");
+      };
+      light.onclick = function () {
+        document.documentElement.classList.remove("dark-theme");
+        dark.style.setProperty("color", "var(--color-tertiary)");
+        light.style.setProperty("color", "black");
+      };
+    </script>
+  </body>
 </html>
