Finished - just one feature needed to be added

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/index.css" />
+    <link rel="stylesheet" href="./index.css" />
 
     <title>Weather Radar</title>
 
@@ -154,7 +154,7 @@
       </div>
     </section>
 
-    <script src="/src/fetch.js"></script>
-    <script src="/src/mode.js"></script>
+    <script src="./fetch.js"></script>
+    <script src="./mode.js"></script>
   </body>
 </html>
