--- a/project/index.html
+++ b/project/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./public/index.css" />
 
     <title>Weather Radar</title>
 
@@ -80,8 +80,8 @@
 
     <main>
       <div class="photos">
-        <img class="top" src="/assets/images/forest-8592902_1920.webp" />
-        <img class="bottom" src="/assets/images/lake-6798400_1280.webp" />
+        <img class="top" src="./assets/images/forest-8592902_1920.webp" />
+        <img class="bottom" src="./assets/images/lake-6798400_1280.webp" />
       </div>
       <div id="banner" class="banner">
         <h1>
@@ -118,10 +118,10 @@
           area such as hazards or floods
         </p>
         <div class="img-area">
-          <img class="top" src="/assets/images/landscape-8598886_640.webp" />
+          <img class="top" src="./assets/images/lake-6798400_1280.webp" />
           <img
             class="bottom"
-            src="/assets/images/mountains-8306568_1280.webp"
+            src="./assets/images/mountains-8306568_1280.webp"
           />
         </div>
       </div>
@@ -154,7 +154,7 @@
       </div>
     </section>
 
-    <script src="./fetch.js"></script>
-    <script src="./mode.js"></script>
+    <script src="./public/fetch.js"></script>
+    <script src="./public/mode.js"></script>
   </body>
 </html>
