--- a/project/index.html
+++ b/project/index.html
@@ -94,7 +94,7 @@
         </p>
         <div id="scroll" class="scroll">
           <p>Scroll to explore</p>
-          <i class="fa-solid fa-chevron-down"></i>
+          <a href="#input"><i class="fa-solid fa-chevron-down"></i></a>
         </div>
       </div>
     </main>
@@ -110,7 +110,7 @@
 
     <!-- Input Section -->
 
-    <section class="input">
+    <section id="input" class="input">
       <div class="left">
         <h1>Get real time <br />updates</h1>
         <p>
